--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="map-container">
         <!-- Tutaj wstaw swoją własną mapę wektorową -->
-        <img id="map" src="twoja_mapa.svg" alt="Twoja Mapa">
+        <img id="map" src="fangea_mapa.svg" alt="Mapa Fangei">
     </div>
 
     <script src="script.js"></script>
