--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Przeglądarka Grafiki Wektorowej</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Interaktywna Mapa</title>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+        }
+        #map {
+            width: 100vw;
+            height: 100vh;
+            cursor: grab;
+        }
+    </style>
 </head>
 <body>
-    <div id="canvas-container">
-        <svg id="vector-graphic" width="800" height="600" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="fangea_mapa.svg"></use>
-        </svg>
-    </div>
-
+    <img id="map" src="fangea_mapa.svg" alt="Mapa Fangei">
     <script src="script.js"></script>
 </body>
 </html>
