--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interaktywna Mapa</title>
+    <title>Mapa Fangei</title>
     <style>
         body {
             margin: 0;
@@ -17,6 +17,7 @@
     </style>
 </head>
 <body>
+    <body style="background-color:rgb(152, 198, 218);">
     <img id="map" src="fangea_mapa.svg" alt="Mapa Fangei">
     <script src="script.js"></script>
 </body>
