--- a/index.html
+++ b/index.html
@@ -1,26 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="fangeapage.png" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mapa Fangei</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:600&display=swap">
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-        #map {
-            width: 100vw;
-            height: 100vh;
-            cursor: grab;
-        }
-    </style>
+    <title>Strona Główna</title>
 </head>
 <body>
-    <body style="background-color:rgb(152, 198, 218);">
-    <img id="map" src="fangea_mapa.svg" alt="Mapa Fangei">
-    <script src="script.js"></script>
+    <h2>Witaj na stronie głównej!</h2>
+    <!-- Dodaj więcej treści według potrzeb -->
 </body>
 </html>
