--- a/mapa.html
+++ b/mapa.html
@@ -96,6 +96,9 @@
             <a href="#">Wiki</a>
             <a href="#">Linki</a>
             <a href="#">.</a>
+            <a href="#">.</a>
+            <a href="#">.</a>
+            <a href="#">.</a>
         </nav>
     </header>
 
