--- a/mapa.html
+++ b/mapa.html
@@ -86,16 +86,15 @@
 
 <body>
     <header>
-        <div>
-            <img src="your-logo.png" alt="Logo">
-            <h1>Mapa Fangei</h1>
-        </div>
+        <div style="display: flex; align-items: center;">
+            <img src="your-logo.svg" alt="Logo" style="max-height: 40px; margin-right: 10px;">
+            <div id="pageholder-caption" style="font-size: 24px; font-weight: 600; white-space: nowrap;">FANGEA I INNE KONTYNENTY</div>
+        </div>        
         <nav>
             <a href="index.html">Strona główna</a>
             <a href="#">Mapa</a>
             <a href="#">Wiki</a>
             <a href="#">Linki</a>
-            <a href="#"> </a>
             <a href="#">.</a>
         </nav>
     </header>
@@ -107,4 +106,3 @@
 </body>
 
 </html>
-
