--- a/index.html
+++ b/index.html
@@ -1,12 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link rel="icon" href="fangeapage.png" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strona Główna</title>
+    <title>Strona Główna - Mapa Fangei</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:600&display=swap">
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+            font-family: 'Montserrat', sans-serif;
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px;
+            background-color: rgba(44, 62, 80, 0.7);
+            color: #ecf0f1;
+            position: fixed;
+            width: 100%;
+            z-index: 1000;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 24px;
+            font-weight: 600;
+        }
+
+        header img {
+            max-height: 40px;
+            margin-right: 10px;
+        }
+
+        nav {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-left: -30px;
+        }
+
+        nav a {
+            margin-left: 30px;
+            text-decoration: none;
+            color: #ecf0f1;
+            font-weight: 500;
+            font-size: 18px;
+            position: relative;
+            transition: margin-left 0.3s ease;
+        }
+
+        nav a:hover {
+            margin-left: 25px;
+        }
+
+        nav a::after {
+            content: '';
+            position: absolute;
+            bottom: -3px;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background-color: #EBFFFF;
+            transform: scaleX(0);
+            transform-origin: right;
+            transition: transform 0.3s ease;
+        }
+
+        nav a:hover::after {
+            transform: scaleX(1);
+            transform-origin: left;
+        }
+
+        #map {
+            width: 100vw;
+            height: 100vh;
+            cursor: grab;
+        }
+    </style>
 </head>
+
 <body>
-    <h2>Witaj na stronie głównej!</h2>
-    <!-- Dodaj więcej treści według potrzeb -->
+    <header>
+        <div style="display: flex; align-items: center;">
+            <img src="your-logo.svg" alt="Logo" style="max-height: 40px; margin-right: 10px;">
+            <div id="pageholder-caption" style="font-size: 24px; font-weight: 600; white-space: nowrap;">FANGEA I INNE KONTYNENTY</div>
+        </div>      
+        <nav>
+            <a href="index.html">Strona główna</a>
+            <a href="mapa.html">Mapa</a>
+            <a href="#">Wiki</a>
+            <a href="#">Linki</a>
+            <a href="#">.</a>
+        </nav>
+    </header>
+
+    <body style="background-color:rgb(152, 198, 218);">
+        <!-- Pozostawione miejsce na treść strony głównej -->
+    </body>
 </body>
+
 </html>
