--- a/mapa.html
+++ b/mapa.html
@@ -95,6 +95,7 @@
             <a href="#">Mapa</a>
             <a href="#">Wiki</a>
             <a href="#">Linki</a>
+            <a href="#"> </a>
             <a href="#">.</a>
         </nav>
     </header>
