--- a/mapa.html
+++ b/mapa.html
@@ -88,10 +88,10 @@
     <header>
         <div style="display: flex; align-items: center;">
             <img src="your-logo.svg" alt="Logo" style="max-height: 40px; margin-right: 10px;">
-            <div id="pageholder-caption" style="font-size: 24px; font-weight: 600; white-space: nowrap;">FANGEA I INNE KONTYNENTY</div>
+            <div id="pageholder-caption" style="font-size: 24px; font-weight: 600; white-space: nowrap;">Fangea i inne kontynenty</div>
         </div>        
         <nav>
-            <a href="index.html">Strona główna</a>
+            <a href="strona-glowna.html">Strona główna</a>
             <a href="#">Mapa</a>
             <a href="#">Wiki</a>
             <a href="#">Linki</a>
