--- a/strona-glowna.html
+++ b/strona-glowna.html
@@ -120,6 +120,7 @@
             <a href="#">Wiki</a>
             <a href="#">Linki</a>
             <a href="#">.</a>
+            <a href="#">.</a>
         </nav>
     </header>
 
