--- a/strona-glowna.html
+++ b/strona-glowna.html
@@ -119,8 +119,8 @@
             <a href="mapa.html">Mapa</a>
             <a href="#">Wiki</a>
             <a href="#">Linki</a>
-            <a href="#">.</a>
-            <a href="#">.</a>
+            <a href="#"> </a>
+            <a href="#"> </a>
         </nav>
     </header>
 
