--- a/strona-glowna.html
+++ b/strona-glowna.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="fangeapage.png" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strona Główna - Mapa Fangei</title>
+    <title>Strona Główna - Fangea i inne kontynenty</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:600&display=swap">
     <style>
         body {
