--- a/mapa.html
+++ b/mapa.html
@@ -2,118 +2,114 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="fangeapage.png" type="image/png">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mapa - Fangea i inne kontynenty</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:600&display=swap">
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            font-family: 'Montserrat', sans-serif;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-draw/dist/leaflet.draw.css" />
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
 
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px;
-            background-color: rgba(44, 62, 80, 0.7);
-            color: #ecf0f1;
-            position: fixed;
-            width: 100%;
-            z-index: 1000;
-        }
+    #map {
+      height: 100vh;
+      background-color: #98C6DA;
+      position: relative;
+      z-index: 1; /* Set a higher z-index for the map */
+    }
 
-        header h1 {
-            margin: 0;
-            font-size: 24px;
-            font-weight: 600;
-        }
+    .leaflet-control-attribution {
+      display: none;
+    }
 
-        header img {
-            max-height: 40px;
-            margin-right: 10px;
-        }
-
-        nav {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-left: -30px;
-        }
-
-        nav a {
-            margin-left: 30px;
-            text-decoration: none;
-            color: #ecf0f1;
-            font-weight: 500;
-            font-size: 18px;
-            position: relative;
-            transition: margin-left 0.3s ease;
-        }
-
-        nav a:hover {
-            margin-left: 30px;
-        }
-
-        nav a::after {
-            content: '';
-            position: absolute;
-            bottom: -3px;
-            left: 0;
-            width: 100%;
-            height: 2px;
-            background-color: #EBFFFF;
-            transform: scaleX(0);
-            transform-origin: right;
-            transition: transform 0.3s ease;
-        }
-
-        nav a:hover::after {
-            transform: scaleX(1);
-            transform-origin: left;
-        }
-
-        #map {
-            width: 100vw;
-            height: 100vh;
-            cursor: grab;
-        }
-    </style>
+    #back-button {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      background-color: white;
+      padding: 5px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      z-index: 2; /* Set a higher z-index for the button */
+    }
+  </style>
 </head>
 
 <body>
-    <header>
-        <div style="display: flex; align-items: center;">
-            <img src="your-logo.svg" alt="Logo" style="max-height: 40px; margin-right: 10px;">
-            <div id="pageholder-caption" style="font-size: 24px; font-weight: 600; white-space: nowrap;">Fangea i inne kontynenty</div>
-        </div>        
-        <nav>
-            <a href="strona-glowna.html">Strona główna</a>
-            <a href="#">Mapa</a>
-            <a href="#">Wiki</a>
-            <a href="#">Linki</a>
-            <a href="#"> </a>
-            <a href="#">.</a>
-        </nav>
-    </header>
-    <!-- Dodany skrypt JavaScript -->
-    <script>
-        // Sprawdź, czy aktualny URL kończy się na ".html"
-        if (window.location.pathname.endsWith('.html')) {
-            // Utwórz nowy URL bez rozszerzenia ".html"
-            var newURL = window.location.pathname.slice(0, -5);
+  <div id="map"></div>
+  <div id="back-button">
+    <a href="strona-glowna.html" style="text-decoration: none; color: #333;">⤷ Powrót do strony głównej</a>
+  </div>
 
-            // Użyj replaceState, aby zmienić URL bez przeładowywania strony
-            window.history.replaceState({}, document.title, newURL);
-        }
-    </script>
-    <body style="background-color:rgb(152, 198, 218);">
-        <img id="map" src="fangea_mapa.svg" alt="Mapa Fangei">
-        <script src="script.js"></script>
-    </body>
+  <script>
+    var map = L.map('map', {
+      crs: L.CRS.Simple,
+      zoomSnap: 0.01,
+      minZoom: -Infinity,
+      maxZoom: 10
+    });
+
+    var initialBounds = L.latLngBounds(map.unproject([0, 165168000000 / 500], 8), map.unproject([148512000000 / 500, 0], 8));
+    var svgMap = L.imageOverlay('fangea_mapa.svg', initialBounds).addTo(map);
+
+    map.fitBounds(initialBounds);
+
+    var drawnItems = new L.FeatureGroup();
+    map.addLayer(drawnItems);
+
+    var drawControl = new L.Control.Draw({
+      draw: {
+        polyline: {
+          shapeOptions: {
+            color: 'red',
+            opacity: 0.6,
+            weight: 5,
+            clickable: false
+          }
+        },
+        polygon: {
+          showArea: true,
+          shapeOptions: {
+            color: 'red',
+            opacity: 0.6,
+            weight: 3,
+            clickable: false
+          }
+        },
+        rectangle: false,
+        circle: false,
+      },
+      edit: {
+        featureGroup: drawnItems
+      },
+      position: 'topright'
+    });
+
+    map.addControl(drawControl);
+
+    map.on(L.Draw.Event.CREATED, function (e) {
+      var layer = e.layer;
+      drawnItems.addLayer(layer);
+    });
+
+    map.on('zoom', function () {
+      // Handle zoom-related adjustments if needed
+    });
+
+    map.on('drag', function () {
+      // Handle drag-related adjustments if needed
+    });
+
+    window.addEventListener('keydown', function (event) {
+      if (event.key === 'ArrowUp') {
+        // Zoom out
+        map.setZoom(map.getZoom() - 1);
+      }
+    });
+  </script>
 </body>
-
 </html>
