--- a/mapa.html
+++ b/mapa.html
@@ -40,7 +40,7 @@
   <div id="map"></div>
   <div id="back-button">
     <a href="strona-glowna.html" style="text-decoration: none; color: #333;">
-      <img src="powrot.svg" alt="⤷ Powrót do strony głównej" style="width: 300px; height: 300px;"> <!-- Zmiana szerokości i wysokości -->
+      <img src="powrot.svg" alt="Powrót do strony głównej" style="width: 200px; height: 200px;"> <!-- Zmiana szerokości i wysokości -->
     </a>
   </div>
 
