--- a/mapa.html
+++ b/mapa.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet-draw/dist/leaflet.draw.css" />
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script>
-  <title>Strona Główna - Fangea i inne kontynenty</title>
+  <title>Mapa - Fangea i inne kontynenty</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:600&display=swap">
   <style>
     body {
