--- a/wiki/cartland/article-instance.html
+++ b/wiki/cartland/article-instance.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="/grumqy/fangea/local/fangeapage.png" type="image/png">
+    <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cartland</title>
+    <title>Cartland - Fangea i inne kontynenty</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/grumqy/fangea/.css" />
+    <link rel="stylesheet" href="/fangea/.css" />
     <script src="https://kit.fontawesome.com/533593bc84.js" crossorigin="anonymous"></script>
     <style></style>
 </head>
@@ -115,8 +115,8 @@
             </p>
         </article>
     </main>
-    <script src="/grumqy/fangea/pageheader.js"></script>
-    <script src="/grumqy/fangea/article.js"></script>
+    <script src="/fangea/pageheader.js"></script>
+    <script src="/fangea/article.js"></script>
 </body>
 
 </html>
