--- a/wiki/strona-glowna/strona-glowna.html
+++ b/wiki/strona-glowna/strona-glowna.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Strona Główna - Fangea i inne kontynenty</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="/fangea/style.css" />
     <script src="https://kit.fontawesome.com/533593bc84.js" crossorigin="anonymous"></script>
     <style></style>
 </head>
@@ -25,8 +25,8 @@
     <img src="https://cdn.discordapp.com/attachments/899392657653121034/899392760715563058/image0-14-1.gif?ex=662eb0c8&is=661c3bc8&hm=56e35ea5c9291c982f3046bc86945319600025c18cd744e989c7ce41e69b023e&" alt="olek" width="500" height="500">
     <img src="https://cdn.discordapp.com/attachments/899392657653121034/899392760715563058/image0-14-1.gif?ex=662eb0c8&is=661c3bc8&hm=56e35ea5c9291c982f3046bc86945319600025c18cd744e989c7ce41e69b023e&" alt="olek" width="500" height="500">
     <img src="https://cdn.discordapp.com/attachments/899392657653121034/899392760715563058/image0-14-1.gif?ex=662eb0c8&is=661c3bc8&hm=56e35ea5c9291c982f3046bc86945319600025c18cd744e989c7ce41e69b023e&" alt="olek" width="500" height="500">
-    <script src="../pageheader.js"></script>
-    <script src="../article.js"></script>
+    <script src="/fangea/pageheader.js"></script>
+    <script src="/fangea/article.js"></script>
 </body>
 
 </html>
