--- a/mapa/mapa.html
+++ b/mapa/mapa.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link rel="icon" href="fangeapage.png" type="image/png">
+  <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
@@ -43,7 +43,7 @@
   <div id="map"></div>
   <div id="back-button">
     <a href="https://grumqy.github.io/fangea/wiki/strona-glowna/" style="text-decoration: none; color: #333;">
-      <img src="/grumqy/fangea/local/powrot.svg" alt="Powrót do strony głównej" style="width: 200px; height: 200px;">
+      <img src="/fangea/local/powrot.svg" alt="Powrót do strony głównej" style="width: 200px; height: 200px;">
     </a>
   </div>
 
@@ -56,7 +56,7 @@
     });
 
     var initialBounds = L.latLngBounds(map.unproject([0, 165168000000 / 500], 8), map.unproject([148512000000 / 500, 0], 8));
-    var svgMap = L.imageOverlay('/grumqy/fangea/local/fangea_mapa.svg', initialBounds).addTo(map);
+    var svgMap = L.imageOverlay('/fangea/local/fangea_mapa.svg', initialBounds).addTo(map);
 
     map.fitBounds(initialBounds);
 
