--- a/wiki/pampersia/index.html
+++ b/wiki/pampersia/index.html
@@ -222,7 +222,7 @@
                 </tr>
                 <tr>
                     <td>5.</td>
-                    <td><img class="icon large" src="https://i.ibb.co/D51g45k/luka-saresko.png"> Sareskie</td>
+                    <td><img class="icon large" src="https://i.ibb.co/D51g45k/luka-saresko.png"> Luka Saresko</td>
                     <td>150 000</td>
                     <td>Sareskie</td>
                 </tr>
