--- a/wiki/pampersia/index.html
+++ b/wiki/pampersia/index.html
@@ -184,7 +184,7 @@
             </p>
             <p>
                 Największym miastem w Pampersii również jest Pamperś (Około 200 km²).
-                Badania przeprowadzone w ramach ESPON wykazały istnienie w Polsce 5 metropolii (Pamperś, Albertopol, Pamperberg, San Creasesia, Luka Saresco).
+                Badania przeprowadzone w ramach ESPON wykazały istnienie w Pampersii 5 metropolii (Pamperś, Albertopol, Pamperberg, San Creasesia, Luka Saresco).
             </p>
             <p>
                 Poniższa lista przedstawia największe miasta Pampersii (liczące ponad 100 tys.).
