--- a/wiki/disco_babushka/index.html
+++ b/wiki/disco_babushka/index.html
@@ -88,7 +88,7 @@
                 Do dziś niewiele informacji zachowało się z dzieciństwa i młodości Joanny Świtek, głównie ze względu na brak poruszania tego tematu przez Disco Babushkę za życia oraz ze względu na zagubienie źródeł w czasie przeprowadzki rodziny do Iznotii.
             </p>
             <h2>Początek kariery</h2>
-            <figure class="right" style="width: 200px">
+            <figure class="left" style="width: 200px">
                 <img src="https://i.ibb.co/Y20h6rT/obraz-2024-04-21-143310122.png" />
                 <figcaption>
                     Sklep Disco Babushki w 2022 roku
@@ -113,7 +113,7 @@
                 Po rozpoczęciu swej działalności, Joanna Świtek przyjęła swój pseudonim i rozpoczęła ekspansję biznesu do USF, gdzie w Porcie Wilhelm 26 grudnia 2022 roku otworzono największy jej sklep, który okazał się być też najpopularniejszym marketem w mieście w tym czasie. Następny sklep powstał w Pamperbergu, był to jednak sklep na świeżym powietrzu, nie w budynku, został on otworzony w listopadzie 2022 roku. Następnym sklepem był obiekt na osiedlu w Lipawie (Iznotia), nieznana jest jednak dokładna data otwarcia, lecz było to już w 2023 roku.
             </p>
             <h2>Szczyt popularności i kariera polityczna</h2>
-            <figure class="right" style="width: 200px">
+            <figure class="left" style="width: 200px">
                 <img src="https://i.ibb.co/n3XGkz5/obraz-2024-04-21-143748794.png" />
                 <figcaption>
                     Zaprzysiężenie Disco Babushki na prezydenta DRP
