--- a/wiki/disco_babushka/index.html
+++ b/wiki/disco_babushka/index.html
@@ -42,7 +42,7 @@
                         <td colspan="2">
                             <table class="ibox">
                                 <tbody>
-                                    <tr>
+                                    <tr class="center">
                                         <td style="width: 60%; vertical-align: middle">
                                             <img src="https://i.ibb.co/qpC2NqJ/obraz-2024-04-21-142238172.png" />
                                         </td>
@@ -63,8 +63,10 @@
                         <th>Data i miejsce śmierci</th>
                         <td>30 lipca 2023 Pieczarków</td>
                     </tr>
-                    <tr>
-                        <th colspan="2">Prezydent DRP</th>
+                    <tr class="center">
+                        <th colspan="2">
+                            Prezydent DRP
+                        </th>
                     </tr>
                     <tr>
                         <th>Okres</th>
@@ -84,16 +86,16 @@
                 Była prezydent Pieczarii (ur. 1926 w wiosce Jandyna, zm. 2023 w Pieczarkowie), założycielka firmy DiscoBabushkaInternaszionalSklepiki oraz celebrytka znana ze swych kas fiskalnych.
             </p>
             <h2>Dzieciństwo i młodość</h2>
-            <p>
-                Do dziś niewiele informacji zachowało się z dzieciństwa i młodości Joanny Świtek, głównie ze względu na brak poruszania tego tematu przez Disco Babushkę za życia oraz ze względu na zagubienie źródeł w czasie przeprowadzki rodziny do Iznotii.
-            </p>
-            <h2>Początek kariery</h2>
             <figure class="left" style="width: 200px">
                 <img src="https://i.ibb.co/Y20h6rT/obraz-2024-04-21-143310122.png" />
                 <figcaption>
                     Sklep Disco Babushki w 2022 roku
                 </figcaption>
             </figure>
+            <p>
+                Do dziś niewiele informacji zachowało się z dzieciństwa i młodości Joanny Świtek, głównie ze względu na brak poruszania tego tematu przez Disco Babushkę za życia oraz ze względu na zagubienie źródeł w czasie przeprowadzki rodziny do Iznotii.
+            </p>
+            <h2>Początek kariery</h2>
             <p>
                 Z rdzennej wioski przeprowadziła się do Portu Złotice w wieku 95 lat, pod koniec 2022 roku (dokładna data nie jest znana) założyła tam sklepik z muzyką disco, na sprzedaż przeznaczone były kasy fiskalne.
             </p>
@@ -102,13 +104,6 @@
                 <figcaption>
                     Sklep Disco Babushki w Porcie Wilhelm w dniu otwarcia
                 </figcaption>
-            </figure>
-            <figure class="left" style="width: 200px">
-                <img src="https://i.ibb.co/LpBRh2y/obraz-2024-04-21-143554160.png" />
-                <figcaption>
-                    Sklep przyjmował również antyki – na zdjęciu klient przyniósł barokową tablicę
-                </figcaption>
-            </figure>
             <p>
                 Po rozpoczęciu swej działalności, Joanna Świtek przyjęła swój pseudonim i rozpoczęła ekspansję biznesu do USF, gdzie w Porcie Wilhelm 26 grudnia 2022 roku otworzono największy jej sklep, który okazał się być też najpopularniejszym marketem w mieście w tym czasie. Następny sklep powstał w Pamperbergu, był to jednak sklep na świeżym powietrzu, nie w budynku, został on otworzony w listopadzie 2022 roku. Następnym sklepem był obiekt na osiedlu w Lipawie (Iznotia), nieznana jest jednak dokładna data otwarcia, lecz było to już w 2023 roku.
             </p>
@@ -138,18 +133,11 @@
                 <figcaption>
                     Aleja Odrodzenia w trakcie pogrzebu
                 </figcaption>
-            </figure>
-            <figure class="right" style="width: 200px">
-                <img src="https://i.ibb.co/QfqGQYY/obraz-2024-04-21-144149521.png" />
-                <figcaption>
-                    Super Disco Babushek, wnuk Disco Babushki w trakcie przemowy na pogrzebie
-                </figcaption>
-            </figure>
             <p>
                 Śmierć Disco Babushki wywołała żałobę w Pieczarii, reszta Fangei jednak przyjęła tą informację z entuzjazmem, wcześniej za granicą DRP postać Disco Babushki była oczerniana. Publiczny pogrzeb odbył się na alei Odrodzenia w Pieczarkowie, w trakcie którego przemówiła rodzina zmarłej oraz prezydent kraju, Izydor Nwm Ktoś.
             </p>
             <h2>Rodzina Babushków</h2>
-            <figure class="left" style="width: 200px">
+            <figure class="right" style="width: 200px">
                 <img src="https://i.ibb.co/CmB4pf2/obraz-2024-04-21-144311512.png" />
                 <figcaption>
                     Mogiła rodziny Babushków
@@ -166,8 +154,7 @@
             <ul>
                 <li>Tramwaj Disco Babushki</li>
                 <li>DiscoBabushkaInternaszionalSklepiki</li>
-            </ul>
-            
+            </ul>        
         </article>
     </main>
     <script src="/fangea/pageheader.js"></script>
