--- a/wiki/disco_babushka/index.html
+++ b/wiki/disco_babushka/index.html
@@ -104,6 +104,7 @@
                 <figcaption>
                     Sklep Disco Babushki w Porcie Wilhelm w dniu otwarcia
                 </figcaption>
+            </figure>
             <p>
                 Po rozpoczęciu swej działalności, Joanna Świtek przyjęła swój pseudonim i rozpoczęła ekspansję biznesu do USF, gdzie w Porcie Wilhelm 26 grudnia 2022 roku otworzono największy jej sklep, który okazał się być też najpopularniejszym marketem w mieście w tym czasie. Następny sklep powstał w Pamperbergu, był to jednak sklep na świeżym powietrzu, nie w budynku, został on otworzony w listopadzie 2022 roku. Następnym sklepem był obiekt na osiedlu w Lipawie (Iznotia), nieznana jest jednak dokładna data otwarcia, lecz było to już w 2023 roku.
             </p>
