--- a/wiki/disco_babushka/index.html
+++ b/wiki/disco_babushka/index.html
@@ -40,7 +40,7 @@
                 <tbody>
                     <tr>
                         <td colspan="2">
-                            <table class="ibox">
+                            <table class="center">
                                 <tbody>
                                     <tr class="center">
                                         <td style="width: 60%; vertical-align: middle">
@@ -134,6 +134,7 @@
                 <figcaption>
                     Aleja Odrodzenia w trakcie pogrzebu
                 </figcaption>
+            </figure>
             <p>
                 Śmierć Disco Babushki wywołała żałobę w Pieczarii, reszta Fangei jednak przyjęła tą informację z entuzjazmem, wcześniej za granicą DRP postać Disco Babushki była oczerniana. Publiczny pogrzeb odbył się na alei Odrodzenia w Pieczarkowie, w trakcie którego przemówiła rodzina zmarłej oraz prezydent kraju, Izydor Nwm Ktoś.
             </p>
