--- a/wiki/disco_babushka/index.html
+++ b/wiki/disco_babushka/index.html
@@ -38,7 +38,7 @@
                     Joanna „Disco Babushka” Świtek
                 </caption>
                 <tbody>
-                    <tr>
+                    <tr class="center">
                         <td colspan="2">
                             <img src="https://i.ibb.co/qpC2NqJ/obraz-2024-04-21-142238172.png" />
                         </td>
