--- a/wiki/cartland/index.html
+++ b/wiki/cartland/index.html
@@ -92,6 +92,12 @@
                 W kwietniu 2023 r. Cartland ogłosił na Prima Aprilis, że przejmie 64 lokalizacje od sieci detalicznej Van Kirk, rozpoczynając przyjacielską rywalizację.
             </p>
             <h2>Zakłady produkcyjne i logistyka</h2>
+            <figure class="right" style="width: 200px">
+                <img src="https://i.ibb.co/rZt95GP/obraz-2024-04-21-154302119.png" />
+                <figcaption>
+                    Pierwsze wydanie gazetki Cartland
+                </figcaption>
+            </figure>
             <p>
                 Cartland posiada cztery centra logistyczne w Montecydji zatrudniających około 1400 pracowników.<br/>
                 W dniu 4 września 2021 r. w parku przemysłowym przy autostradzie A2 w pobliżu Tucholina w Zarwii otwarto zakład mięsny o wartości 40 mln kp. Około 200 pracowników przetwarza tam mięso na 125 produktów, które są dostarczane do sklepów Cartland w Montecydji.
