--- a/mapa/index.html
+++ b/mapa/index.html
@@ -40,6 +40,8 @@
 </head>
 
 <body>
+  <header id="pageheader">
+  </header>
   <div id="map"></div>
   <div id="back-button">
     <a href="https://grumqy.github.io/fangea/wiki/strona-glowna/" style="text-decoration: none; color: #333;">
