--- a/mapa/index.html
+++ b/mapa/index.html
@@ -48,7 +48,7 @@
       <img src="/fangea/local/powrot.svg" alt="Powrót do strony głównej" style="width: 200px; height: 200px;">
     </a>
   </div>
-
+<script src="../pageheader.js"></script>
   <script>
     var map = L.map('map', {
       crs: L.CRS.Simple,
