--- a/mapa/index.html
+++ b/mapa/index.html
@@ -20,7 +20,8 @@
     }
 
     #map {
-      height: 100vh;
+      margin-top: 80px;
+      height: calc(100vh - 80px);
       background-color: #98C6DA;
       position: relative;
       z-index: 1;
