--- a/wiki/strona-glowna/index.html
+++ b/wiki/strona-glowna/index.html
@@ -35,7 +35,7 @@
     </header>
     <main style="height: calc(100vh - 80px); overflow: hidden; position: relative;">
         <div style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: flex; justify-content: center; align-items: center; flex-direction: column; animation: logo-entrance 0.5s ease-in-out alternate;">
-            <img width="100%" src="logo.svg">
+            <img width="100%" src="/fangea/local/logo.svg">
             <div style="font-size: 3rem; font-weight: 700; color: #ecf0f1; white-space: nowrap;">Fangea</div>
             <div style="font-size: 1.5rem; font-weight: 700; color: #ecf0f1; white-space: nowrap;">& inne kontynenty</div>
             </div>
