--- a/wiki/pampersia/index.html
+++ b/wiki/pampersia/index.html
@@ -59,7 +59,7 @@
                         </td>
                     </tr>
                     <tr class="center">
-                        <td colspan="2" style="margin-bottom: 5px;"><audio controls><source src="/fangea/local/hymnpam.mp3" type="audio/mpeg"></audio></td>
+                        <td colspan="2" style="margin-bottom: 5px;"><audio controls><source src="https://audio.jukehost.co.uk/XKw0NCNMl4LuqccJFuoGuyxhaNBExCsZ" type="audio/mpeg"></audio></td>
                     </tr>
                     <tr class="center">
                         <td colspan="2">Hymn: Pamperska Wola</td>
