--- a/wiki/montecydja/index.html
+++ b/wiki/montecydja/index.html
@@ -183,7 +183,7 @@
             <p>
                 W Montecydji nie ma obecnie miast o wielkości 1 mln mieszkańców lub większych, ale ‘cztery wielkie miasta’ (jak się mówi o Kolencydamie, Wernie, Bruktodynie i Padbucken) wraz z otaczającymi je mniejszymi miejscowościami razem przekraczają próg 1 mln mieszkańców.
             </p>
-            <h1>Geografia</h1>
+            <h1>Miasta</h1>
             <p>
                 Według danych, w Montecydji jest około 60 miast. Najludniejszym miastem jest Kolencydam (420 tys).
                 Największym miastem w Montecydji również jest Kolencydam (około 190 km²). Przeprowadzone badania wykazały istnienie w Montecydji 4 metropolii (Kolencydam, Werno, Bruktodyn oraz Padbucken).
