--- a/wiki/montecydja/index.html
+++ b/wiki/montecydja/index.html
@@ -200,19 +200,19 @@
                     <td>1.</td>
                     <td><img class="icon large" src="https://i.ibb.co/qR91TtW/kolencydam-herb.png"> Kolencydam</td>
                     <td>420 000</td>
-                    <td>Kolenstadtdzkie</td>
+                    <td>Kolenstadt</td>
                 </tr>
                 <tr>
                     <td>2.</td>
                     <td><img class="icon large" src="https://i.ibb.co/m5Xp96k/zarwia-herb.png"> Werno</td>
                     <td>310 000</td>
-                    <td>Zarwijskie</td>
+                    <td>Zarwia</td>
                 </tr>
                 <tr>
                     <td>3.</td>
                     <td><img class="icon large" src="https://i.ibb.co/Bz0Y2p1/bruktodyn-herb.png"> Bruktodyn</td>
                     <td>260 000</td>
-                    <td>Lucyjskie</td>
+                    <td>Lucja</td>
                 </tr>
                 <tr>
                     <td>4.</td>
