--- a/wiki/montecydja/index.html
+++ b/wiki/montecydja/index.html
@@ -156,7 +156,7 @@
                 Montezerisch, Montezerische Eidgenossenschaft, Konfederacja Montecydyjska - państwo federacyjne położone w Fangeii Zachodniej. Jest jednym z niewielu państw, w których obowiązują szeroko stosowane formy demokracji bezpośredniej. Montecydja do Bractwa Narodów przystąpiła dopiero 6 grudnia 2023 po przegłosowaniu tej decyzji w referendum minimalną większością 54% głosów.
             </p>
             <p>
-                Nie jest częścią Układu Pergolskiego ani Pergolskiego Obszaru Gospodarczego – w 2024 roku Montecydyjczycy w referendum zdecydowanie (86% głosów przeciw) odrzucili nawet samą koncepcję rozpoczęcia rozmów o członkostwie. Posiada jednak specjalne dwustronne stosunki z UP, dzięki czemu uczestniczy w wybranych inicjatywach oraz dopłaca do budżetu PRD. Montecydja ma dwie stolice, administracyjną - gdzie jest siedziba rządu - Werno, oraz stolice konstytucyjną - Kolencydam.
+                Nie jest częścią Układu Pregolskiego ani Pregolskiego Obszaru Gospodarczego – w 2024 roku Montecydyjczycy w referendum zdecydowanie (86% głosów przeciw) odrzucili nawet samą koncepcję rozpoczęcia rozmów o członkostwie. Posiada jednak specjalne dwustronne stosunki z UP, dzięki czemu uczestniczy w wybranych inicjatywach oraz dopłaca do budżetu PRD. Montecydja ma dwie stolice, administracyjną - gdzie jest siedziba rządu - Werno, oraz stolice konstytucyjną - Kolencydam.
             </p>
             <p>    
                 Montecydja jest jednym z krajów ciepłych. Graniczy z Halandią, Pieczarią, Atidalią i Nadmorzem. Dominującymi religiami w Montecydji są katolicyzm (54,7% ludności) i protestantyzm (34,9%).
