--- a/wiki/nadmorze/index.html
+++ b/wiki/nadmorze/index.html
@@ -166,7 +166,7 @@
             </p>
             <h1>Etymologia</h1>
             <p>
-                Źródosłów wyrazu „Nadmorze” nie został udokumentowany w świadectwach historycznych. Najprawdopodobniej jest to nazwa zjednoczonych plemion zamieszkujących tamtejsze regiony zapożyczona od wyrazów nad morzem. Nazwy Nadmorze zaczęto używać w odniesieniu do całego państwa w XIX wieku i funkcjonowała pierwotnie jako forma określenia „ziemia nadmorska”. Zarówno nazwy Nadmorza i Nadmorzan jak i większość nazw nadawanych im w innych językach wywodzą się z tego źródła.
+                Źródosłów wyrazu „Nadmorze” nie został udokumentowany w świadectwach historycznych. Najprawdopodobniej jest to nazwa zjednoczonych plemion zamieszkujących tamtejsze regiony zapożyczona od wyrazów „nad” i „morzem”. Nazwy Nadmorze zaczęto używać w odniesieniu do całego państwa w XIX wieku i funkcjonowała pierwotnie jako forma określenia „ziemia nadmorska”. Zarówno nazwy Nadmorza i Nadmorzan jak i większość nazw nadawanych im w innych językach wywodzą się z tego źródła.
             </p>
             <h1>Miasta</h1>
             <p>
