--- a/wiki/cartland/index.html
+++ b/wiki/cartland/index.html
@@ -6,6 +6,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cartland - Fangea i inne kontynenty</title>
+    <meta property="og:title" content="Cartland">
+    <meta name="twitter:title" content="Cartland">
+    <meta name="description" content="Cartland to firma zajmująca się sprzedażą detaliczną żywności z siedzibą w Wernie. Prowadzi 450 placówek i jest reprezentowana w siedmiu innych krajach oprócz Montecydji. Ten pełnozakresowy detalista spożywczy jest spółką niezależną.">
+    <meta property="og:description" content="Cartland to firma zajmująca się sprzedażą detaliczną żywności z siedzibą w Wernie. Prowadzi 450 placówek i jest reprezentowana w siedmiu innych krajach oprócz Montecydji. Ten pełnozakresowy detalista spożywczy jest spółką niezależną.">
+    <meta name="twitter:description" content="Cartland to firma zajmująca się sprzedażą detaliczną żywności z siedzibą w Wernie. Prowadzi 450 placówek i jest reprezentowana w siedmiu innych krajach oprócz Montecydji. Ten pełnozakresowy detalista spożywczy jest spółką niezależną.">
+    <meta property="og:image" content="https://i.ibb.co/0Jb1MMt/obraz-2024-04-21-010640252.png">
+    <meta name="twitter:image" content="https://i.ibb.co/0Jb1MMt/obraz-2024-04-21-010640252.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
