--- a/wiki/pampersia/index.html
+++ b/wiki/pampersia/index.html
@@ -6,6 +6,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rzeczpospolita Pampersia - Fangea i inne kontynenty</title>
+    <meta property="og:title" content="Pampersia">
+    <meta name="twitter:title" content="Pampersia">
+    <meta name="description" content="Pampersia, Rzeczpospolita Pampersia (RP) - Państwo unitarne w Fangei Środkowej. Położone między Morzem Pamperskim na północy a rzeką XYZ na południu, w przeważającej części w dorzeczu Ostry. Od wschodu graniczy z WRN a od południa z USF. Większość północnej granicy Pampersii wyznacza wybrzeże Morza Pamperskiego. Pamperska Wyłączna Strefa Ekonomiczna na Morzu Pamperskim graniczy ze strefami WRN oraz USF.">
+    <meta property="og:description" content="Pampersia, Rzeczpospolita Pampersia (RP) - Państwo unitarne w Fangei Środkowej. Położone między Morzem Pamperskim na północy a rzeką XYZ na południu, w przeważającej części w dorzeczu Ostry. Od wschodu graniczy z WRN a od południa z USF. Większość północnej granicy Pampersii wyznacza wybrzeże Morza Pamperskiego. Pamperska Wyłączna Strefa Ekonomiczna na Morzu Pamperskim graniczy ze strefami WRN oraz USF.">
+    <meta name="twitter:description" content="Pampersia, Rzeczpospolita Pampersia (RP) - Państwo unitarne w Fangei Środkowej. Położone między Morzem Pamperskim na północy a rzeką XYZ na południu, w przeważającej części w dorzeczu Ostry. Od wschodu graniczy z WRN a od południa z USF. Większość północnej granicy Pampersii wyznacza wybrzeże Morza Pamperskiego. Pamperska Wyłączna Strefa Ekonomiczna na Morzu Pamperskim graniczy ze strefami WRN oraz USF.">
+    <meta property="og:image" content="https://i.ibb.co/bJFhJjH/pampersia.png">
+    <meta name="twitter:image" content="https://i.ibb.co/bJFhJjH/pampersia.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
