--- a/wiki/nadmorze/index.html
+++ b/wiki/nadmorze/index.html
@@ -6,6 +6,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wielka Republika Nadmorska - Fangea i inne kontynenty</title>
+        <meta property="og:title" content="Nadmorze">
+    <meta name="twitter:title" content="Nadmorze">
+    <meta name="description" content="Nadmorze, Republika Nadmorska, Wielka Republika Nadmorska (WRN) - Państwo unitarne w Fangei Wschodniej, położone na wyspach oraz nad wschodnim wybrzeżem Fangei nad Oceanem Koralowym. Posiada terytoria zamorskie. Od północy Nadmorze graniczy z Pampersią, od zachodu z Pampersią oraz Stanami Zjednoczonymi Fangei Południowej. Od zachodniej strony terytorium Jarpersi graniczy z Unforgivią, od zachodniej strony terytorium Naziemia graniczy z Montecydją. Większość wschodniej granicy Nadmorza wyznacza wybrzeże Oceanu Koralowego. Nadmorska Wyłączna Strefa Ekonomiczna na Oceanie Koralowym graniczy ze strefą USF, zaś na Oceanie Północnym ze Strefami Pampersii, USF oraz Iznotii.">
+    <meta property="og:description" content="Nadmorze, Republika Nadmorska, Wielka Republika Nadmorska (WRN) - Państwo unitarne w Fangei Wschodniej, położone na wyspach oraz nad wschodnim wybrzeżem Fangei nad Oceanem Koralowym. Posiada terytoria zamorskie. Od północy Nadmorze graniczy z Pampersią, od zachodu z Pampersią oraz Stanami Zjednoczonymi Fangei Południowej. Od zachodniej strony terytorium Jarpersi graniczy z Unforgivią, od zachodniej strony terytorium Naziemia graniczy z Montecydją. Większość wschodniej granicy Nadmorza wyznacza wybrzeże Oceanu Koralowego. Nadmorska Wyłączna Strefa Ekonomiczna na Oceanie Koralowym graniczy ze strefą USF, zaś na Oceanie Północnym ze Strefami Pampersii, USF oraz Iznotii.">
+    <meta name="twitter:description" content="Nadmorze, Republika Nadmorska, Wielka Republika Nadmorska (WRN) - Państwo unitarne w Fangei Wschodniej, położone na wyspach oraz nad wschodnim wybrzeżem Fangei nad Oceanem Koralowym. Posiada terytoria zamorskie. Od północy Nadmorze graniczy z Pampersią, od zachodu z Pampersią oraz Stanami Zjednoczonymi Fangei Południowej. Od zachodniej strony terytorium Jarpersi graniczy z Unforgivią, od zachodniej strony terytorium Naziemia graniczy z Montecydją. Większość wschodniej granicy Nadmorza wyznacza wybrzeże Oceanu Koralowego. Nadmorska Wyłączna Strefa Ekonomiczna na Oceanie Koralowym graniczy ze strefą USF, zaś na Oceanie Północnym ze Strefami Pampersii, USF oraz Iznotii.">
+    <meta property="og:image" content="https://i.ibb.co/172NNM4/rnflaga.png">
+    <meta name="twitter:image" content="https://i.ibb.co/172NNM4/rnflaga.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
