--- a/wiki/montecydja/index.html
+++ b/wiki/montecydja/index.html
@@ -6,6 +6,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Konfederacja Montecydyjska - Fangea i inne kontynenty</title>
+    <meta property="og:title" content="Montecydja">
+    <meta name="twitter:title" content="Montecydja">
+    <meta name="description" content="Montezerisch, Montezerische Eidgenossenschaft, Konfederacja Montecydyjska - państwo federacyjne położone w Fangeii Zachodniej. Jest jednym z niewielu państw, w których obowiązują szeroko stosowane formy demokracji bezpośredniej. Montecydja do Bractwa Narodów przystąpiła dopiero 6 grudnia 2023 po przegłosowaniu tej decyzji w referendum minimalną większością 54% głosów.">
+    <meta property="og:description" content="Montezerisch, Montezerische Eidgenossenschaft, Konfederacja Montecydyjska - państwo federacyjne położone w Fangeii Zachodniej. Jest jednym z niewielu państw, w których obowiązują szeroko stosowane formy demokracji bezpośredniej. Montecydja do Bractwa Narodów przystąpiła dopiero 6 grudnia 2023 po przegłosowaniu tej decyzji w referendum minimalną większością 54% głosów.">
+    <meta name="twitter:description" content="Montezerisch, Montezerische Eidgenossenschaft, Konfederacja Montecydyjska - państwo federacyjne położone w Fangeii Zachodniej. Jest jednym z niewielu państw, w których obowiązują szeroko stosowane formy demokracji bezpośredniej. Montecydja do Bractwa Narodów przystąpiła dopiero 6 grudnia 2023 po przegłosowaniu tej decyzji w referendum minimalną większością 54% głosów.">
+    <meta property="og:image" content="https://i.ibb.co/Fhvtg3R/montecydja-flaga.png">
+    <meta name="twitter:image" content="https://i.ibb.co/Fhvtg3R/montecydja-flaga.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
