--- a/wiki/disco_babushka/index.html
+++ b/wiki/disco_babushka/index.html
@@ -6,6 +6,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Joanna „Disco Babushka” Świtek - Fangea i inne kontynenty</title>
+        <meta property="og:title" content="„Disco Babushka” Świtek">
+    <meta name="twitter:title" content="„Disco Babushka” Świtek">
+    <meta name="description" content="Była prezydent Pieczarii (ur. 1926 w wiosce Jandyna, zm. 2023 w Pieczarkowie), założycielka firmy DiscoBabushkaInternaszionalSklepiki oraz celebrytka znana ze swych kas fiskalnych. Do dziś niewiele informacji zachowało się z dzieciństwa i młodości Joanny Świtek, głównie ze względu na brak poruszania tego tematu przez Disco Babushkę za życia oraz ze względu na zagubienie źródeł w czasie przeprowadzki rodziny do Iznotii.">
+    <meta property="og:description" content="Była prezydent Pieczarii (ur. 1926 w wiosce Jandyna, zm. 2023 w Pieczarkowie), założycielka firmy DiscoBabushkaInternaszionalSklepiki oraz celebrytka znana ze swych kas fiskalnych. Do dziś niewiele informacji zachowało się z dzieciństwa i młodości Joanny Świtek, głównie ze względu na brak poruszania tego tematu przez Disco Babushkę za życia oraz ze względu na zagubienie źródeł w czasie przeprowadzki rodziny do Iznotii.">
+    <meta name="twitter:description" content="Była prezydent Pieczarii (ur. 1926 w wiosce Jandyna, zm. 2023 w Pieczarkowie), założycielka firmy DiscoBabushkaInternaszionalSklepiki oraz celebrytka znana ze swych kas fiskalnych. Do dziś niewiele informacji zachowało się z dzieciństwa i młodości Joanny Świtek, głównie ze względu na brak poruszania tego tematu przez Disco Babushkę za życia oraz ze względu na zagubienie źródeł w czasie przeprowadzki rodziny do Iznotii.">
+    <meta property="og:image" content="https://i.ibb.co/qpC2NqJ/obraz-2024-04-21-142238172.png">
+    <meta name="twitter:image" content="https://i.ibb.co/qpC2NqJ/obraz-2024-04-21-142238172.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
