--- a/wiki/ajjbdalizm_religia/index.html
+++ b/wiki/ajjbdalizm_religia/index.html
@@ -6,6 +6,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ajjbdalizm (religia) - Fangea i inne kontynenty</title>
+    <meta property="og:title" content="Ajjbdalizm (religia)">
+    <meta name="twitter:title" content="Ajjbdalizm (religia)">
+    <meta name="description" content="Religia henoteistyczna, założona w okolicach III wieku n.e. Najstarsze miejsce ajjbdalskich obrzędów religijnych nie jest dokładnie znane, lecz wywodzi się ona z wiosek między dzisiejszym Pieczarkowem a Portem Złotice, później jednak jej wyznawcy przemieścili się na południowy-wschód, do okolic dzisiejszej Lubieży i Nowej Łodyczej.">
+    <meta property="og:description" content="Religia henoteistyczna, założona w okolicach III wieku n.e. Najstarsze miejsce ajjbdalskich obrzędów religijnych nie jest dokładnie znane, lecz wywodzi się ona z wiosek między dzisiejszym Pieczarkowem a Portem Złotice, później jednak jej wyznawcy przemieścili się na południowy-wschód, do okolic dzisiejszej Lubieży i Nowej Łodyczej.">
+    <meta name="twitter:description" content="Religia henoteistyczna, założona w okolicach III wieku n.e. Najstarsze miejsce ajjbdalskich obrzędów religijnych nie jest dokładnie znane, lecz wywodzi się ona z wiosek między dzisiejszym Pieczarkowem a Portem Złotice, później jednak jej wyznawcy przemieścili się na południowy-wschód, do okolic dzisiejszej Lubieży i Nowej Łodyczej.">
+    <meta property="og:image" content="https://i.ibb.co/KWWyrKQ/obraz-2024-04-24-183233344.png">
+    <meta name="twitter:image" content="https://i.ibb.co/KWWyrKQ/obraz-2024-04-24-183233344.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
